--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,4 @@ packages/react-devtools-inline/dist
 packages/react-devtools-shell/dist
 packages/react-devtools-timeline/dist
 
-node_modules/.cache/*
+node_modules\.cache\default-development
