--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "sass": "^1.79.3",
+    "sass": "^1.79.4",
     "web-vitals": "^2.1.4",
     "xstate": "^5.18.2"
   },
@@ -39,6 +39,7 @@
     ]
   },
   "devDependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "resolve-url-loader": "^5.0.0"
   }
 }
